<?xml version="1.0" encoding="utf-8"?>
<resources>

    <item type="id" name="dialog_confirm_mark_all_as_read"/>
    <item type="id" name="dialog_confirm_delete"/>
    <item type="id" name="dialog_confirm_spam"/>
    <item type="id" name="dialog_attachment_progress"/>
    <item type="id" name="dialog_account_setup_error"/>
    <item type="id" name="rename"/>
    <item type="id" name="delete"/>
    <item type="id" name="audio_challenge_input"/>
    <item type="id" name="button_play_sound_again"/>
    <item type="id" name="button_sound_ok"/>
    <item type="id" name="reminder_set_time_button"/>
    <item type="id" name="reminder_set_date_button"/>
    <item type="id" name="reminder_set_date_and_time_button"/>
    <item type="id" name="reminder_date"/>
    <item type="id" name="reminder_time"/>
    <item type="id" name="follow_up_reminder_text"/>

</resources>
