...
    <string name="status_no_background">Sync disabled - No background activity</string>
    <string name="status_poll_and_push_disabled">Polling and pushing disabled</string>
    <string name="status_syncing_blocked">Syncing blocked</string>
    <string name="status_syncing_off">Syncing disabled</string>

    <string name="actionbar_selected"><xliff:g id="selection_count">%d</xliff:g> selected</string>
    <string name="next_action">Next</string>
    <string name="previous_action">Previous</string>
    <!-- Used to confirm acceptance of dialog boxes, warnings, errors, etc. -->
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="send_later_action">Send Later</string>
    <string name="send_again_action">Send Again</string>
    <string name="empty_subject">Subject is empty, click again to send anyway</string>
    <string name="select_action">Select</string>
...
    <string name="spam_action">Spam</string>
    <string name="forward_action">Forward</string>
    <string name="forward_as_attachment_action">Forward as attachment</string>
    <string name="move_action">Move</string>
    <string name="single_message_options_action">Send…</string>
    <string name="refile_action">Refile…</string>
    <string name="done_action">Done</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save</string>
    <string name="save_scheduled_action">Save scheduled message</string>
    <string name="check_mail_action">Check mail</string>
    <string name="send_messages_action">Send messages</string>
    <string name="refresh_folders_action">Refresh folder list</string>
...
    <string name="account_setup_check_settings_check_outgoing_msg">Checking outgoing server settings\u2026</string>
    <string name="account_setup_check_settings_authenticate">Authenticating\u2026</string>
    <string name="account_setup_check_settings_fetch">Fetching account settings\u2026</string>
    <string name="account_setup_check_settings_canceling_msg">Canceling\u2026</string>

    <string name="account_setup_names_title">You\'re almost done!</string>
    <string name="account_setup_names_account_name_label">Give this account a name (optional):</string>
    <string name="account_setup_names_user_name_label">Type your name (displays on outgoing messages):</string>

    <string name="account_setup_account_type_title">Account type</string>
    <string name="account_setup_account_type_instructions">What kind of account is this?</string>
    <string name="account_setup_account_type_pop_action">POP3</string>
    <string name="account_setup_account_type_imap_action">IMAP</string>
    <string name="account_setup_account_type_webdav_action">Exchange (WebDAV)</string>
...
    <string name="sent_folder_label">Sent folder</string>
    <string name="trash_folder_label">Trash folder</string>
    <string name="archive_folder_label">Archive folder</string>
    <string name="spam_folder_label">Spam folder</string>

    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>

    <string name="account_setup_incoming_subscribed_folders_only_label">Show only subscribed folders</string>
    <string name="account_setup_auto_expand_folder">Auto-expand folder</string>

    <string name="account_setup_incoming_webdav_path_prefix_label">OWA path</string>
...
    <string name="font_size_message_view_bcc">Bcc</string>
    <string name="font_size_message_view_additional_headers">Additional headers</string>
    <string name="font_size_message_view_subject">Subject</string>
    <string name="font_size_message_view_date">Time and date</string>
    <string name="font_size_message_view_content">Message body</string>
    <string name="font_size_message_view_content_summary"><xliff:g id="fontsize">%d</xliff:g>%%</string>
    <string name="font_size_message_view_content_dialog_title"><xliff:g id="title">%1$s</xliff:g>: <xliff:g id="summary">%2$s</xliff:g></string>

    <string name="font_size_message_compose">Message composition</string>
    <string name="font_size_message_compose_input">Text input fields</string>

    <string name="font_size_default">Default</string>
    <string name="font_size_tiniest">Tiniest</string>
...
    <string name="unread_widget_all_messages_account_summary">All messages</string>
    <string name="unread_widget_folder_enabled_title">Folder count</string>
    <string name="unread_widget_folder_enabled_summary">Display the unread count of only a single folder</string>
    <string name="unread_widget_folder_title">Folder</string>
    <string name="unread_widget_folder_summary">The folder for which the unread count should be displayed</string>
    <string name="unread_widget_action_done">Done</string>
    <string name="unread_widget_title"><xliff:g id="account_name">%1$s</xliff:g> - <xliff:g id="folder_name">%2$s</xliff:g></string>
    <string name="unread_widget_account_not_selected">No account selected</string>
    <string name="unread_widget_folder_not_selected">No folder selected</string>

    <string name="import_dialog_error_title">Missing File Manager Application</string>
    <string name="close">Close</string>

...
    <string name="crypto_no_provider_button">Choose OpenPGP App</string>

    <string name="drunk_mode">Drunk Mode</string>
    <string name="drunk_mode_settings_title">Drunk Mode Settings</string>
    <string name="drunk_mode_test_challenges_debug">Test Challenges (For Debug Only!)</string>

    <string name="mailing_lists">Mailing Lists</string>
    <string name="mailing_list_email_list">Email List</string>
    <string name="mail_list_widget_text">K-9 Message List</string>
    <string name="mail_list_widget_loading">Loading messages…</string>
    <string name="fetching_folders_failed">Fetching folder list failed</string>
    <string name="messageview_crypto_warning_details">Show Details</string>
    <string name="error_recipient_crypto_retrieve">Error retrieving recipient status from OpenPGP provider!</string>
...
