...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fsck.k9.activity.setup.RenameMailingList"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/mailingListName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
...
        android:text="Cancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/mailingListName"/>

    <Button
        android:id="@+id/button_rename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rename"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/mailingListName" />

...
